// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds repost views fetches reposted-by for a post 1`] = `
[
  {
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": {
      "muted": false,
    },
  },
  {
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(1)",
    "handle": "dan.test",
    "viewer": {
      "following": "record(0)",
      "muted": false,
    },
  },
  {
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(2)",
    "handle": "carol.test",
    "viewer": {
      "followedBy": "record(2)",
      "following": "record(1)",
      "muted": false,
    },
  },
  {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(3)",
    "displayName": "bobby",
    "handle": "bob.test",
    "viewer": {
      "followedBy": "record(4)",
      "following": "record(3)",
      "muted": false,
    },
  },
]
`;

exports[`pds repost views fetches reposted-by for a reply 1`] = `
[
  {
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": {
      "muted": false,
    },
  },
  {
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(1)",
    "handle": "dan.test",
    "viewer": {
      "following": "record(0)",
      "muted": false,
    },
  },
]
`;
